--- a/deployment.yaml
+++ b/deployment.yaml
@@ -17,4 +17,8 @@ spec:
         image: gcr.io/project-gcp-1998/ecommerce-app
         ports:
         - containerPort: 8080
-
+        resources:
+          requests:
+            cpu: "100m"
+          limits:
+            cpu: "250m"
